--- a/log_model.ipynb
+++ b/log_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,44 +28,124 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
-    "intresting_features=[\"GENHLTH\",\"POORHLTH\",\"HLTHPLN1\",\"CHECKUP1\",\"BPMEDS\",\"TOLDHI2\",\"CVDSTRK3\",\"LADULT\",\"PHYSHLTH\",\"MENTHLTH\",\n",
-    "                     \"HLTHPLN1\",\"CHECKUP1\",\"TOLDHI2\",\"CVDSTRK3\",\"CHCOCNCR\",\"CHCCOPD1\",\"HAVARTH3\",\"CHCKIDNY\",\"DIABETE3\",\"SEX\"]"
+    "intresting_features=[\"GENHLTH\",\"POORHLTH\",\"HLTHPLN1\",\"CHECKUP1\",\"BPMEDS\",\"TOLDHI2\",\"CVDSTRK3\",\"PHYSHLTH\",\"MENTHLTH\",\n",
+    "                     \"HLTHPLN1\",\"CVDSTRK3\",\"CHCOCNCR\",\"CHCCOPD1\",\"HAVARTH3\",\"CHCKIDNY\",\"DIABETE3\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dico_ever_told={1:1,2:0,7:0.5,9:0}"
+    "dico_transfos={\"GENHLTH\":{7:-1,8:-1,9:-1},\"POORHLTH\":{88:0,77:-1,99:-1},\"HLTHPLN1\":{7:-1,9:-1},\"CHECKUP1\":{8:15,7:-1,9:-1},\n",
+    "               \"BPMEDS\":{7:-1,9:-1}, \"TOLDHI2\":{7:-1,9:-1}, \"PHYSHLTH\":{88:0,77:-1,99:-1},\n",
+    "               \"MENTHLTH\":{88:0,77:-1,99:-1}, \"CVDSTRK3\":{7:-1, 9:-1}, \"HLTHPLN1\":{9:-1}, \"CHCOCNCR\":{7:-1, 9:-1},\n",
+    "               \"HAVARTH3\":{7:-1, 9:-1}, \"CHCKIDNY\":{7:-1, 9:-1}, \"DIABETE3\":{7:-1, 9:-1}, \"CHCCOPD1\":{7:-1, 9:-1}\n",
+    "               }"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dico_transfos={\"GENHLTH\":{7:4,9:4},\"POORHLTH\":{88:0,77:0,99:0},\"HLTHPLN1\":{1:1, 2:0,7:0.5,9:0},\"CHECKUP1\":{1:1,2:2,3:3,4:4,8:15,7:0.5,9:0},\"BPMEDS\":{1:1,2:0,7:0.5,9:0},\"TOLDHI2\":{1:1,2:0,7:0.5,9:0},\n",
-    "               \"CVDCRHD4\":{1:1,2:0,7:0.5,9:0},\"LADULT\":{2:0},\"PHYSHLTH\":{88:0,77:np.nan,99:np.nan},\"MENTHLTH\":{88:0,77:0,99:0},\"HLTHPLN1\":dico_ever_told,\" CHECKUP1\":{3:5,4:10,7:2,8:100,9:3},\n",
-    "               \"CVDSTRK3\":dico_ever_told,\"TOLDHI2\":dico_ever_told,\"CHCOCNCR\":dico_ever_told,\"CHCCOPD1\":dico_ever_told,\"CVDSTRK3\":dico_ever_told,\"HAVARTH3\":dico_ever_told,\n",
-    "               \"CHCKIDNY\":dico_ever_told,\"DIABETE3\":dico_ever_told,\"SEX\":{2:0}}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 106,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x_tr2=x_tr.copy()\n",
+    "x_tr_temp=x_tr.copy()\n",
     "for col in intresting_features:\n",
-    "    x_tr2[col].replace(dico_transfos[col],inplace=True)"
+    "    x_tr_temp[col].replace(dico_transfos[col],inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "GENHLTH_median  = x_tr_temp[\"GENHLTH\"][x_tr_temp[\"GENHLTH\"].isin(np.arange(1, 6))].median()\n",
+    "POORHLTH_mean   = x_tr_temp[\"POORHLTH\"][x_tr_temp[\"POORHLTH\"].isin(np.arange(0, 31))].mean()\n",
+    "HLTHPLN1_median = x_tr_temp[\"HLTHPLN1\"][x_tr_temp[\"HLTHPLN1\"].isin(np.arange(1, 3))].median()\n",
+    "CHECKUP1_median = x_tr_temp[\"CHECKUP1\"][x_tr_temp[\"CHECKUP1\"].isin(np.arange(0, 5))].median()\n",
+    "BPMEDS_median   = x_tr_temp[\"BPMEDS\"][x_tr_temp[\"BPMEDS\"].isin(np.arange(1, 2))].median()\n",
+    "TOLDHI2_median  = x_tr_temp[\"TOLDHI2\"][x_tr_temp[\"TOLDHI2\"].isin(np.arange(1, 3))].median()\n",
+    "PHYSHLTH_mean   = x_tr_temp[\"PHYSHLTH\"][x_tr_temp[\"PHYSHLTH\"].isin(np.arange(0, 31))].mean()\n",
+    "MENTHLTH_mean   = x_tr_temp[\"MENTHLTH\"][x_tr_temp[\"MENTHLTH\"].isin(np.arange(0, 31))].mean()\n",
+    "CVDSTRK3_median = x_tr_temp[\"CVDSTRK3\"][x_tr_temp[\"CVDSTRK3\"].isin(np.arange(1, 3))].median()\n",
+    "CHCKIDNY_median = x_tr_temp[\"CHCKIDNY\"][x_tr_temp[\"CHCKIDNY\"].isin(np.arange(1, 3))].median()\n",
+    "CHCOCNCR_median = x_tr_temp[\"CHCOCNCR\"][x_tr_temp[\"CHCOCNCR\"].isin(np.arange(1, 3))].median()\n",
+    "HAVARTH3_median = x_tr_temp[\"HAVARTH3\"][x_tr_temp[\"HAVARTH3\"].isin(np.arange(1, 3))].median()\n",
+    "DIABETE3_median = x_tr_temp[\"DIABETE3\"][x_tr_temp[\"DIABETE3\"].isin(np.arange(1, 5))].median()\n",
+    "CHCCOPD1_median = x_tr_temp[\"CHCCOPD1\"][x_tr_temp[\"CHCCOPD1\"].isin(np.arange(1, 5))].median()\n",
+    "\n",
+    "new_median_mean_fix_columns = [\"GENHLTH\", \"POORHLTH\", \"HLTHPLN1\", \"CHECKUP1\", \"BPMEDS\", \"TOLDHI2\", \"PHYSHLTH\", \"MENTHLTH\",\n",
+    "                               \"CVDSTRK3\", \"CHCOCNCR\", \"HAVARTH3\", \"DIABETE3\", \"CHCCOPD1\"]\n",
+    "\n",
+    "new_dico_transformations = {\"GENHLTH\":{-1:GENHLTH_median},\"POORHLTH\":{-1:POORHLTH_mean},\"HLTHPLN1\":{-1:HLTHPLN1_median},\n",
+    "                            \"CHECKUP1\":{-1:CHECKUP1_median}, \"BPMEDS\":{-1:BPMEDS_median}, \"TOLDHI2\":{-1:TOLDHI2_median},\n",
+    "                            \"PHYSHLTH\":{-1:PHYSHLTH_mean}, \"MENTHLTH\":{-1:MENTHLTH_mean}, \"CVDSTRK3\":{-1:CHCKIDNY_median},\n",
+    "                            \"CHCOCNCR\":{-1:CHCOCNCR_median},\"HAVARTH3\":{-1:HAVARTH3_median},\"DIABETE3\":{-1:DIABETE3_median},\n",
+    "                            \"CHCCOPD1\":{-1:CHCCOPD1_median}\n",
+    "                            }\n",
+    "\n",
+    "x_tr2=x_tr_temp.copy()\n",
+    "for col in new_median_mean_fix_columns:\n",
+    "    x_tr2[col].replace(new_dico_transformations[col],inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DIABETE3\n",
+       "3.0    277049\n",
+       "1.0     42223\n",
+       "4.0      5709\n",
+       "2.0      2675\n",
+       "7.0       406\n",
+       "9.0        68\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_tr[\"DIABETE3\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DIABETE3\n",
+       "3.0    277523\n",
+       "1.0     42223\n",
+       "4.0      5709\n",
+       "2.0      2675\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_tr2[\"DIABETE3\"].value_counts()"
    ]
   },
   {
@@ -528,7 +608,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.18"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
