fix weights in progress

--- a/log_model.ipynb
+++ b/log_model.ipynb
@@ -2,11 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -18,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +37,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fix_weight_value(value):\n",
+    "    if ((50 <= value) or (value <= 999)):\n",
+    "        #return the value in kg\n",
+    "        0.453592 * value\n",
+    "    elif ((9000<= value) or (value <= 9998)):\n",
+    "        return value%9000\n",
+    "    elif ((value==7777) or (value==9999)):\n",
+    "        return -1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,54 +113,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "DIABETE3\n",
-       "3.0    277049\n",
-       "1.0     42223\n",
-       "4.0      5709\n",
-       "2.0      2675\n",
-       "7.0       406\n",
-       "9.0        68\n",
+       "GENHLTH\n",
+       "2.0    108089\n",
+       "3.0    101880\n",
+       "1.0     56937\n",
+       "4.0     43349\n",
+       "5.0     16992\n",
+       "7.0       562\n",
+       "9.0       324\n",
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "x_tr[\"DIABETE3\"].value_counts()"
+    "x_tr[\"GENHLTH\"].value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "DIABETE3\n",
-       "3.0    277523\n",
-       "1.0     42223\n",
-       "4.0      5709\n",
-       "2.0      2675\n",
+       "_RFHLTH\n",
+       "1    266906\n",
+       "2     60341\n",
+       "9       888\n",
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "x_tr2[\"DIABETE3\"].value_counts()"
+    "x_tr[\"_RFHLTH\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GENHLTH\n",
+       " 2.0    108089\n",
+       " 3.0    101880\n",
+       " 1.0     56937\n",
+       " 4.0     43349\n",
+       " 5.0     16992\n",
+       "-1.0       886\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_tr_temp[\"GENHLTH\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GENHLTH\n",
+       "2.0    108975\n",
+       "3.0    101880\n",
+       "1.0     56937\n",
+       "4.0     43349\n",
+       "5.0     16992\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_tr2[\"GENHLTH\"].value_counts()"
    ]
   },
   {
