done with feature selection

--- a/log_model.ipynb
+++ b/log_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
    "outputs": [],
    "source": [
     "%%capture\n",
-    "#Converting the weights to kg, and asigning lacking answers to -1\n",
+    "#Converting the weights to kg, and asigning lacking answers to NaN\n",
     "array = x_tr[\"WEIGHT2\"].values\n",
     "pounds_indices  = ((array >= 50)*(array <= 999))\n",
     "kg_indices      = ((array >= 9000)*(array <= 9998))\n",
@@ -57,7 +57,7 @@
     "\n",
     "x_tr[\"WEIGHT2\"][pounds_indices] = 0.453592 * x_tr[\"WEIGHT2\"][pounds_indices]\n",
     "x_tr[\"WEIGHT2\"][kg_indices] = x_tr[\"WEIGHT2\"][kg_indices]%9000\n",
-    "x_tr[\"WEIGHT2\"][none_indices] = -1"
+    "x_tr[\"WEIGHT2\"][none_indices] = np.nan"
    ]
   },
   {
@@ -67,7 +67,7 @@
    "outputs": [],
    "source": [
     "%%capture\n",
-    "#converting the height to meters, and asigning lacking answers to -1\n",
+    "#converting the height to meters, and asigning lacking answers to NaN\n",
     "array = x_tr[\"HEIGHT3\"].values\n",
     "imperial_indices    = ((array >= 200)*(array <= 711))\n",
     "cm_indices          = ((array >= 9000)*(array <= 9998))\n",
@@ -75,7 +75,23 @@
     "\n",
     "x_tr[\"HEIGHT3\"][imperial_indices] = 0.3048 * x_tr[\"HEIGHT3\"][imperial_indices]//100 + 0.0254 * x_tr[\"HEIGHT3\"][imperial_indices]%100\n",
     "x_tr[\"HEIGHT3\"][cm_indices] = x_tr[\"HEIGHT3\"][cm_indices]%9000\n",
-    "x_tr[\"HEIGHT3\"][none_indices] = -1"
+    "x_tr[\"HEIGHT3\"][none_indices] = np.nan"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%capture\n",
+    "#converting FLSHTMY2 to months, and asigning lacking answers to NaN\n",
+    "array = x_tr[\"FLSHTMY2\"]\n",
+    "none_indices = (array == 777777) + (array == 999999)\n",
+    "days_indices = ((array >= 12014)*(array <= 122015))\n",
+    "\n",
+    "x_tr[\"FLSHTMY2\"][none_indices] = np.nan\n",
+    "x_tr[\"FLSHTMY2\"][days_indices] = x_tr[\"FLSHTMY2\"][days_indices]//10000 + 12*x_tr[\"FLSHTMY2\"][days_indices]%10000"
    ]
   },
   {
@@ -165,7 +181,16 @@
     "               \"USEEQUIP\":{7:np.nan, 9:np.nan}, \"BLIND\":{7:np.nan, 9:np.nan}, \"DECIDE\":{7:np.nan, 9:np.nan}, \"DIFFWALK\":{7:np.nan, 9:np.nan},\n",
     "               \"DIFFDRES\":{7:np.nan, 9:np.nan}, \"DIFFALON\":{7:np.nan, 9:np.nan}, \"SMOKE100\":{7:np.nan, 9:np.nan}, \"SMOKDAY2\":{7:np.nan, 9:np.nan},\n",
     "               \"USENOW3\":{7:np.nan, 9:np.nan}, \"AVEDRNK2\":{77:np.nan, 99:np.nan}, \"DRNK3GE5\":{77:np.nan, 88:np.nan, 99:np.nan}, \"MAXDRNKS\":{77:np.nan, 99:np.nan},\n",
-    "               \"EXERANY2\":{7:np.nan, 9:np.nan}, \"EXERHMM1\":{777:np.nan, 999:np.nan}, \"SEATBELT\":{7:np.nan, 8:np.nan, 9:np.nan}, \"PNEUVAC3\":{7:np.nan, 9:np.nan}}"
+    "               \"EXERANY2\":{7:np.nan, 9:np.nan}, \"EXERHMM1\":{777:np.nan, 999:np.nan}, \"SEATBELT\":{7:np.nan, 8:np.nan, 9:np.nan}, \"PNEUVAC3\":{7:np.nan, 9:np.nan},\n",
+    "               \"ARTHDIS2\":{7:np.nan, 9:np.nan}, \"ARTHSOCL\":{7:np.nan, 9:np.nan}, \"JOINPAIN\":{77:np.nan, 99:np.nan}, \"ARTHEDU\":{7:np.nan, 9:np.nan}, \"FLUSHOT6\":{7:np.nan, 9:np.nan},\n",
+    "               \"DOCTDIAB\":{88:0, 77:np.nan, 99:np.nan}, \"DIABEYE\":{7:np.nan, 9:np.nan}, \"CRGVMST2\":{7:np.nan, 9:np.nan}, \"VIDFCLT2\":{7:np.nan}, \"VIREDIF3\":{7:np.nan},\n",
+    "               \"VICTRCT4\":{7:np.nan}, \"VIGLUMA2\":{7:np.nan}, \"VIMACDG2\":{7:np.nan}, \"CIMEMLOS\":{7:np.nan, 9:np.nan}, \"CDSOCIAL\":{7:np.nan, 9:np.nan}, \"DRADVISE\":{7:np.nan, 9:np.nan},\n",
+    "               \"ASTHMAGE\":{97:6, 98:np.nan, 99:np.nan}, \"ASERVIST\":{88:0}, \"CVDASPRN\":{7:np.nan, 9:np.nan}, \"RDUCHART\":{7:np.nan, 9:np.nan}, \"ARTHEXER\":{7:2, 9:2},\n",
+    "               \"HPVADVC2\":{7:np.nan, 9:np.nan}, \"HPVADSHT\":{77:np.nan, 99:np.nan}, \"PCPSARE1\":{7:np.nan, 9:np.nan}, \"MISTMNT\":{7:np.nan, 9:np.nan},\n",
+    "               \"_CHISPNC\":{9:np.nan}, \"_RFCHOL\":{9:np.nan}, \"_LTASTH1\":{9:1}, \"_CASTHM1\":{9:0}, \"_ASTHMS1\":{9:3}, \"_HISPANC\":{9:2}, \"_AGEG5YR\":{14:np.nan}, \"_CHLDCNT\":{9:np.nan},\n",
+    "               \"_EDUCAG\":{9:np.nan}, \"_INCOMG\":{9:np.nan}, \"_SMOKER3\":{9:4}, \"_RFSMOK3\":{9:1}, \"DRNKANY5\":{9:1, 7:1}, \"DROCDY3_\":{900:np.nan},\n",
+    "               \"_TOTINDA\":{9:np.nan}, \"_LMTSCL1\":{9:np.nan}, \"_RFSEAT2\":{9:0}, \"_PASTRNG\":{9:2}, \"_PACAT1\":{9:2}, \"STRFREQ_\":{99000:np.nan}\n",
+    "               }"
    ]
   },
   {
@@ -192,6 +217,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "nan"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "values, counts = np.unique(x_tr[\"CRGVMST2\"].values, return_counts=True)\n",
+    "values[np.argmax(counts)]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 175,
    "metadata": {},
    "outputs": [],
@@ -211,6 +257,21 @@
     "FVORANG_mean    = x_tr_temp[\"FVORANG\"].mean()\n",
     "VEGETAB1_mean   = x_tr_temp[\"VEGETAB1\"].mean()\n",
     "EXERHMM1_mean   = x_tr_temp[\"EXERHMM1\"].mean()\n",
+    "\n",
+    "FLSHTMY2_mean   = x_tr_temp[\"FLSHTMY2\"].mean()\n",
+    "FTJUDA1__mean   = x_tr_temp[\"FTJUDA1_\"].mean()\n",
+    "FRUTDA1__mean   = x_tr_temp[\"FRUTDA1_\"].mean()\n",
+    "BEANDAY__mean   = x_tr_temp[\"BEANDAY_\"].mean()\n",
+    "GRENDAY__mean   = x_tr_temp[\"GRENDAY_\"].mean()\n",
+    "ORNGDAY__mean   = x_tr_temp[\"ORNGDAY_\"].mean()\n",
+    "VEGEDA1__mean   = x_tr_temp[\"VEGEDA1_\"].mean()\n",
+    "STRFREQ__mean   = x_tr_temp[\"STRFREQ_\"].mean()\n",
+    "\n",
+    "CRGVMST2_mean    = x_tr[\"CRGVMST2\"].value_counts().index[0]\n",
+    "VICTRCT4_mean    = x_tr[\"CRGVMST2\"].value_counts().index[0]\n",
+    "ARTHEXER_mean    = 2\n",
+    "HPVADSHT_mean    = 0\n",
+    "PCPSARE1_mean    = 2\n",
     "\n",
     "#define the medians we will use to replace the NaN\n",
     "GENHLTH_median  = x_tr_temp[\"GENHLTH\"][x_tr_temp[\"GENHLTH\"].isin(np.arange(1, 6))].median()\n",
@@ -247,16 +308,48 @@
     "EXERANY2_median = x_tr_temp[\"EXERANY2\"][x_tr_temp[\"EXERANY2\"].isin(np.arange(1, 3))].median()\n",
     "SEATBELT_median = x_tr_temp[\"SEATBELT\"][x_tr_temp[\"SEATBELT\"].isin(np.arange(1, 6))].median()\n",
     "PNEUVAC3_median = x_tr_temp[\"PNEUVAC3\"][x_tr_temp[\"PNEUVAC3\"].isin(np.arange(1, 3))].median()\n",
+    "VIDFCLT2_median = x_tr_temp[\"VIDFCLT2\"][x_tr_temp[\"VIDFCLT2\"].isin(np.arange(1, 3))].median()\n",
+    "\n",
+    "_BMI5_median    = x_tr_temp[\"_BMI5\"][x_tr_temp[\"_BMI5\"].isin(np.arange(35, 96))].median()\n",
+    "MSCODE_median   = x_tr_temp[\"MSCODE\"][x_tr_temp[\"MSCODE\"].isin(np.arange(1, 3))].median()\n",
+    "ARTHEDU_median  = x_tr_temp[\"ARTHEDU\"][x_tr_temp[\"ARTHEDU\"].isin(np.arange(1, 3))].median()\n",
+    "_INCOMG_median  = x_tr_temp[\"_INCOMG\"][x_tr_temp[\"_INCOMG\"].isin(np.arange(1, 6))].median()\n",
+    "_EDUCAG_median  = x_tr_temp[\"_EDUCAG\"][x_tr_temp[\"_EDUCAG\"].isin(np.arange(1, 7))].median()\n",
+    "_RFCHOL_median  = x_tr_temp[\"_RFCHOL\"][x_tr_temp[\"_RFCHOL\"].isin(np.arange(1, 3))].median()\n",
+    "MISTMNT_median  = x_tr_temp[\"MISTMNT\"][x_tr_temp[\"MISTMNT\"].isin(np.arange(1, 3))].median()\n",
+    "DIABEYE_median  = x_tr_temp[\"DIABEYE\"][x_tr_temp[\"DIABEYE\"].isin(np.arange(1, 3))].median()\n",
+    "ARTHDIS2_median = x_tr_temp[\"ARTHDIS2\"][x_tr_temp[\"ARTHDIS2\"].isin(np.arange(1, 3))].median()\n",
+    "ARTHSOCL_median = x_tr_temp[\"ARTHSOCL\"][x_tr_temp[\"ARTHSOCL\"].isin(np.arange(1, 4))].median()\n",
+    "JOINPAIN_median = x_tr_temp[\"JOINPAIN\"][x_tr_temp[\"JOINPAIN\"].isin(np.arange(0, 11))].median()\n",
+    "FLUSHOT6_median = x_tr_temp[\"FLUSHOT6\"][x_tr_temp[\"FLUSHOT6\"].isin(np.arange(1, 3))].median()\n",
+    "DOCTDIAB_median = x_tr_temp[\"DOCTDIAB\"][x_tr_temp[\"DOCTDIAB\"].isin(np.arange(0, 77))].median()\n",
+    "VIREDIF3_median = x_tr_temp[\"VIREDIF3\"][x_tr_temp[\"VIREDIF3\"].isin(np.arange(1, 6))].median()\n",
+    "VIGLUMA2_median = x_tr_temp[\"VIGLUMA2\"][x_tr_temp[\"VIGLUMA2\"].isin(np.arange(1, 3))].median()\n",
+    "VIMACDG2_median = x_tr_temp[\"VIMACDG2\"][x_tr_temp[\"VIMACDG2\"].isin(np.arange(1, 3))].median()\n",
+    "CIMEMLOS_median = x_tr_temp[\"CIMEMLOS\"][x_tr_temp[\"CIMEMLOS\"].isin(np.arange(1, 3))].median()\n",
+    "CDSOCIAL_median = x_tr_temp[\"CDSOCIAL\"][x_tr_temp[\"CDSOCIAL\"].isin(np.arange(1, 6))].median()\n",
+    "DRADVISE_median = x_tr_temp[\"DRADVISE\"][x_tr_temp[\"DRADVISE\"].isin(np.arange(1, 3))].median()\n",
+    "HPVADVC2_median = x_tr_temp[\"HPVADVC2\"][x_tr_temp[\"HPVADVC2\"].isin(np.arange(1, 4))].median()\n",
+    "_CHISPNC_median = x_tr_temp[\"_CHISPNC\"][x_tr_temp[\"_CHISPNC\"].isin(np.arange(1, 3))].median()\n",
+    "_DRDXAR1_median = x_tr_temp[\"_DRDXAR1\"][x_tr_temp[\"_DRDXAR1\"].isin(np.arange(1, 3))].median()\n",
+    "_AGEG5YR_median = x_tr_temp[\"_AGEG5YR\"][x_tr_temp[\"_AGEG5YR\"].isin(np.arange(1, 14))].median()\n",
+    "DROCDY3__median = x_tr_temp[\"DROCDY3_\"][x_tr_temp[\"DROCDY3_\"].isin(np.arange(0, 900))].median()\n",
+    "_CHLDCNT_median = x_tr_temp[\"_CHLDCNT\"][x_tr_temp[\"_CHLDCNT\"].isin(np.arange(1, 7))].median()\n",
+    "_TOTINDA_median = x_tr_temp[\"_TOTINDA\"][x_tr_temp[\"_TOTINDA\"].isin(np.arange(1, 2))].median()\n",
+    "_LMTSCL1_median = x_tr_temp[\"_LMTSCL1\"][x_tr_temp[\"_LMTSCL1\"].isin(np.arange(1, 5))].median()\n",
     "\n",
     "\n",
     "#list of features to replace NaN with the mean\n",
     "mean_features   = [\"POORHLTH\", \"PHYSHLTH\", \"MENTHLTH\", \"WEIGHT2\", \"DIABAGE2\", \"WEIGHT2\", \"HEIGHT3\", \"FRUITJU1\", \"FRUIT1\", \"FVBEANS\", \"FVGREEN\", \"FVORANG\", \"VEGETAB1\",\n",
-    "                   \"EXERHMM1\"]\n",
+    "                   \"EXERHMM1\", \"FLSHTMY2\", \"FTJUDA1_\", \"FRUTDA1_\", \"BEANDAY_\", \"GRENDAY_\", \"ORNGDAY_\", \"VEGEDA1_\", \"STRFREQ_\", \"CRGVMST2\", \"VICTRCT4\", \"ARTHEXER\", \"HPVADSHT\", \"PCPSARE1\"]\n",
     "\n",
     "#list of features to replace NaN with the median\n",
     "median_features = [\"GENHLTH\", \"HLTHPLN1\", \"CHECKUP1\", \"BPMEDS\", \"TOLDHI2\", \"CVDSTRK3\", \"CHCKIDNY\", \"CHCOCNCR\", \"HAVARTH3\", \"DIABETE3\", \"CHCCOPD1\", \"ASTHMA3\", \"ASTHNOW\", \"CHCSCNCR\",\n",
     "                   \"ADDEPEV2\", \"EDUCA\", \"INCOME2\", \"QLACTLM2\", \"USEEQUIP\", \"BLIND\", \"DECIDE\", \"DIFFWALK\", \"DIFFDRES\", \"DIFFALON\", \"SMOKE100\", \"SMOKDAY2\", \"USENOW3\", \"ALCDAY5\", \"AVEDRNK2\",\n",
-    "                   \"DRNK3GE5\", \"MAXDRNKS\", \"EXERANY2\", \"SEATBELT\", \"PNEUVAC3\"]\n",
+    "                   \"DRNK3GE5\", \"MAXDRNKS\", \"EXERANY2\", \"SEATBELT\", \"PNEUVAC3\", \"ARTHDIS2\", \"ARTHSOCL\", \"JOINPAIN\", \"FLUSHOT6\", \"DOCTDIAB\", \"VIREDIF3\", \"VIGLUMA2\", \"VIMACDG2\", \"CIMEMLOS\",\n",
+    "                   \"CDSOCIAL\", \"DRADVISE\", \"HPVADVC2\", \"_CHISPNC\", \"_DRDXAR1\", \"_AGEG5YR\", \"DROCDY3_\", \"_CHLDCNT\", \"_TOTINDA\", \"_LMTSCL1\", \"ARTHEDU\", \"_INCOMG\", \"_EDUCAG\", \"_RFCHOL\", \n",
+    "                   \"MISTMNT\", \"DIABEYE\", \"_BMI5\"]\n",
+    "\n",
     "\n",
     "#replace the NaN with the mean\n",
     "for feature in mean_features:\n",
