split train/test cases - PBM: HEIGHT

--- a/log_model.ipynb
+++ b/log_model.ipynb
@@ -35,7 +35,7 @@
     "    with open(DATA_FOLDER + 'x_train.pickle', 'rb') as f:\n",
     "        x_train = pickle.load(f)\n",
     "    with open(DATA_FOLDER + 'x_test.pickle', 'rb') as f:\n",
-    "        x_test = pickle.load(f)\n",
+    "        x_try = pickle.load(f)\n",
     "    with open(DATA_FOLDER + 'y_train.pickle', 'rb') as f:\n",
     "        y_train = pickle.load(f)\n",
     "    with open(DATA_FOLDER + 'test_ids.pickle', 'rb') as f:\n",
@@ -43,7 +43,7 @@
     "    with open(DATA_FOLDER + 'names_map.pickle', 'rb') as f:\n",
     "        names_map = pickle.load(f)\n",
     "except:\n",
-    "    x_train, x_test, y_train, train_ids, test_ids = load_csv_data(DATA_FOLDER, sub_sample=False)\n",
+    "    x_train, x_try, y_train, train_ids, test_ids = load_csv_data(DATA_FOLDER, sub_sample=False)\n",
     "\n",
     "    names = np.genfromtxt(DATA_FOLDER + 'x_train.csv', delimiter=\",\", dtype=str, max_rows=1)\n",
     "    names = np.delete(names, 0)\n",
@@ -55,7 +55,7 @@
     "        pickle.dump(x_train, f)\n",
     "\n",
     "    with open(DATA_FOLDER + 'x_test.pickle', 'wb') as f:\n",
-    "        pickle.dump(x_test, f)\n",
+    "        pickle.dump(x_try, f)\n",
     "\n",
     "    with open(DATA_FOLDER + 'y_train.pickle', 'wb') as f:\n",
     "        pickle.dump(y_train, f)\n",
@@ -108,12 +108,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_test, y_test = preprocessing.clean_data(x_tr, y_tr, names_map=names_map)"
+    "x_try, y_try, test_mean_dico, test_median_dico = preprocessing.clean_data(x_tr, y_tr, names_map=names_map)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
        "array([501., 510., 507., ..., 502., 510., 508.])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -142,13 +142,13 @@
        "array([224.54, 250.4 , 241.78, ..., 228.08, 250.4 , 244.32])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "x_test[:, names_map[\"HEIGHT3\"]]"
+    "x_try[:, names_map[\"HEIGHT3\"]]"
    ]
   },
   {
@@ -196,7 +196,7 @@
     }
    ],
    "source": [
-    "x_test[:, names_map[\"WEIGHT2\"]]"
+    "x_try[:, names_map[\"WEIGHT2\"]]"
    ]
   },
   {
@@ -631,7 +631,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_train, x_test, y_train, train_ids, test_ids=load_csv_data(\"data\")"
+    "x_train, x_try, y_train, train_ids, test_ids=load_csv_data(\"data\")"
    ]
   },
   {
@@ -640,7 +640,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_test=pd.read_csv(\"data/x_test.csv\")"
+    "x_try=pd.read_csv(\"data/x_test.csv\")"
    ]
   },
   {
@@ -649,7 +649,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_test2=x_test.copy()\n",
+    "x_test2=x_try.copy()\n",
     "fill_mean=True\n",
     "for col in intresting_features:\n",
     "    x_test2[col].replace(dico_transfos[col],inplace=True)\n",
