Added scaling option in preprocessing.

--- a/log_model.ipynb
+++ b/log_model.ipynb
@@ -35,7 +35,7 @@
     "    with open(DATA_FOLDER + 'x_train.pickle', 'rb') as f:\n",
     "        x_train = pickle.load(f)\n",
     "    with open(DATA_FOLDER + 'x_test.pickle', 'rb') as f:\n",
-    "        x_try = pickle.load(f)\n",
+    "        x_test = pickle.load(f)\n",
     "    with open(DATA_FOLDER + 'y_train.pickle', 'rb') as f:\n",
     "        y_train = pickle.load(f)\n",
     "    with open(DATA_FOLDER + 'test_ids.pickle', 'rb') as f:\n",
@@ -90,7 +90,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Testing preprocessing function"
+    "# Preprocessing \\& Scaling"
    ]
   },
   {
@@ -99,7 +99,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import preprocessing"
+    "from preprocessing import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#clean the data and return the cleaned dataset, the y values, the mean and median dictionnaries to use to clean other sets (test set for example)\n",
+    "x_tr_clean, y_tr_clean, mean_dico, median_dico = clean_data(names_map, x_tr, y_tr, is_y=True, is_train_data=True)\n",
+    "\n",
+    "#if we don't have the y values, we use is_y=False.\n",
+    "x_test_clean, _, _, _ = clean_data(names_map, x_test, y_raw=None, is_y=False, is_train_data=False, mean_dico=mean_dico, median_dico=median_dico)\n",
+    "\n",
+    "#compute the scaled train dataset and the mean and std used for the scaling\n",
+    "x_tr_scaled, train_mean, train_std = scale_data(x_tr_clean, names_map, is_train_data=True)\n",
+    "\n",
+    "#scale the test set using the mean and std computed on the train set\n",
+    "x_test_scaled, _, _ = scale_data(x_test_clean, names_map, is_train_data=False, train_mean=train_mean, train_std=train_std)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Testing preprocessing function"
    ]
   },
   {
@@ -113,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +148,7 @@
        "array([501., 510., 507., ..., 502., 510., 508.])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +168,7 @@
        "array([224.54, 250.4 , 241.78, ..., 228.08, 250.4 , 244.32])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,7 +236,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Pre-processing"
+    "# PREVIOUS CODE"
    ]
   },
   {
