--- a/log_model.ipynb
+++ b/log_model.ipynb
@@ -43,7 +43,7 @@
     "    with open(DATA_FOLDER + 'names_map.pickle', 'rb') as f:\n",
     "        names_map = pickle.load(f)\n",
     "except:\n",
-    "    x_train, x_try, y_train, train_ids, test_ids = load_csv_data(DATA_FOLDER, sub_sample=False)\n",
+    "    x_train, x_test, y_train, train_ids, test_ids = load_csv_data(DATA_FOLDER, sub_sample=False)\n",
     "\n",
     "    names = np.genfromtxt(DATA_FOLDER + 'x_train.csv', delimiter=\",\", dtype=str, max_rows=1)\n",
     "    names = np.delete(names, 0)\n",
@@ -106,7 +106,19 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'x_test' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\antho\\Desktop\\EPFL\\WHAI\\log_model.ipynb Cell 8\u001b[0m line \u001b[0;36m5\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/antho/Desktop/EPFL/WHAI/log_model.ipynb#X10sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m x_tr_clean, y_tr_clean, mean_dico, median_dico \u001b[39m=\u001b[39m clean_data(names_map, x_tr, y_tr, is_y\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m, is_train_data\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/antho/Desktop/EPFL/WHAI/log_model.ipynb#X10sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39m#if we don't have the y values, we use is_y=False.\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/antho/Desktop/EPFL/WHAI/log_model.ipynb#X10sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m x_test_clean, _, _, _ \u001b[39m=\u001b[39m clean_data(names_map, x_test, y_raw\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m, is_y\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m, is_train_data\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m, mean_dico\u001b[39m=\u001b[39mmean_dico, median_dico\u001b[39m=\u001b[39mmedian_dico)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/antho/Desktop/EPFL/WHAI/log_model.ipynb#X10sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39m#compute the scaled train dataset and the mean and std used for the scaling\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/antho/Desktop/EPFL/WHAI/log_model.ipynb#X10sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m x_tr_scaled, train_mean, train_std \u001b[39m=\u001b[39m scale_data(x_tr_clean, names_map, is_train_data\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'x_test' is not defined"
+     ]
+    }
+   ],
    "source": [
     "#clean the data and return the cleaned dataset, the y values, the mean and median dictionnaries to use to clean other sets (test set for example)\n",
     "x_tr_clean, y_tr_clean, mean_dico, median_dico = clean_data(names_map, x_tr, y_tr, is_y=True, is_train_data=True)\n",
