nn, log, feature expension and some graphs

--- a/log_model.ipynb
+++ b/log_model.ipynb
@@ -402,7 +402,7 @@
    "outputs": [],
    "source": [
     "x_test2=x_test.copy()\n",
-    "fill_mean=True\n",
+    "fill_mean=False\n",
     "for col in intresting_features:\n",
     "    x_test2[col].replace(dico_transfos[col],inplace=True)\n",
     "\n",
