--- a/run_ipynb.ipynb
+++ b/run_ipynb.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,8 @@
     "from implementations import *\n",
     "import os\n",
     "from helpers import *\n",
-    "from preprocessing import *"
+    "from preprocessing import *\n",
+    "import pickle"
    ]
   },
   {
@@ -24,15 +25,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Preprocessing and Scalings"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +35,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    with open(DATA_FOLDER + 'x_train.pickle', 'rb') as f:\n",
+    "        x_train = pickle.load(f)\n",
+    "    with open(DATA_FOLDER + 'x_test.pickle', 'rb') as f:\n",
+    "        x_test = pickle.load(f)\n",
+    "    with open(DATA_FOLDER + 'y_train.pickle', 'rb') as f:\n",
+    "        y_train = pickle.load(f)\n",
+    "    with open(DATA_FOLDER + 'test_ids.pickle', 'rb') as f:\n",
+    "        test_ids = pickle.load(f)\n",
+    "    with open(DATA_FOLDER + 'names_map.pickle', 'rb') as f:\n",
+    "        names_map = pickle.load(f)\n",
+    "except:\n",
+    "    x_train, x_test, y_train, train_ids, test_ids = load_csv_data(DATA_FOLDER, sub_sample=False)\n",
+    "\n",
+    "    names = np.genfromtxt(DATA_FOLDER + 'x_train.csv', delimiter=\",\", dtype=str, max_rows=1)\n",
+    "    names = np.delete(names, 0)\n",
+    "    names_map = {}\n",
+    "    for i in range(len(names)):\n",
+    "        names_map[names[i]] = i\n",
+    "\n",
+    "    with open(DATA_FOLDER + 'x_train.pickle', 'wb') as f:\n",
+    "        pickle.dump(x_train, f)\n",
+    "\n",
+    "    with open(DATA_FOLDER + 'x_test.pickle', 'wb') as f:\n",
+    "        pickle.dump(x_test, f)\n",
+    "\n",
+    "    with open(DATA_FOLDER + 'y_train.pickle', 'wb') as f:\n",
+    "        pickle.dump(y_train, f)\n",
+    "\n",
+    "    with open(DATA_FOLDER + 'test_ids.pickle', 'wb') as f:\n",
+    "        pickle.dump(test_ids, f)\n",
+    "    \n",
+    "    with open(DATA_FOLDER + 'names_map.pickle', 'wb') as f:\n",
+    "        pickle.dump(names_map, f)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Preprocessing and Scalings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DATA_FOLDER = 'data/'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +145,7 @@
        "(328135, 321)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,10 +170,71 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "intersting_features_indexes=np.array([names_map[feature] for feature in intersting_features])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train=x_tr_scaled[intersting_features_indexes]\n",
+    "X_test=x_test_scaled[intersting_features_indexes]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### By correlation with the output"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import seaborn  as sns\n",
+    "\n",
+    "plt.figure(figsize=(10,6))\n",
+    "sns.heatmap(correlations,annot=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "selected_features=intersting_features_indexes[:18].copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([26, 29, 30, 33, 35, 38, 27, 28, 39, 43, 45, 47, 48, 44, 40, 41, 42,\n",
+       "       46])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "selected_features"
+   ]
   }
  ],
  "metadata": {
